[gd_scene load_steps=5 format=3 uid="uid://rdsw0rpdhmmk"]

[ext_resource type="Script" uid="uid://dof8bi28cwbw7" path="res://Scripts/Card Scripts/OldCard/SplitFire.gd" id="1_dpmch"]
[ext_resource type="Texture2D" uid="uid://d1uw1qaq8fcr3" path="res://Asset/pic/Card/SplitFire.png" id="2_dpmch"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dpmch"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmvpx"]
size = Vector2(96, 128)

[node name="SplitFire" type="Node2D"]
script = ExtResource("1_dpmch")
card_name = "Split Fire"
card_description = "+2 Additional Bullets"
stat_change = "DMG -1"

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_dpmch")
texture = ExtResource("2_dpmch")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xmvpx")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
